--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -24,6 +24,8 @@
           <td><%= @song.length %></td>
         </tr>
       </table>
+
+      <button><a href="/songs/<%= @song.id %>/edit">Edit</a></button>
     </div>
   </div>
 </div>
